--- a/Programming Final Work/index.html
+++ b/Programming Final Work/index.html
@@ -1,12 +1,13 @@
 <html>
 
 <head>
-    
+
 </head>
 
 <body>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-    <script src="class.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+	
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script src="script.js"></script>
 </body>
 
